[gd_scene load_steps=4 format=3 uid="uid://b2pdyqn1g8alf"]

[ext_resource type="Script" path="res://weapons/controllers/missle_launcher_controller.gd" id="1_j4t82"]
[ext_resource type="PackedScene" uid="uid://dn3ibgxlrn2d7" path="res://weapons/emitters/attack_emitter.tscn" id="2_m6a2r"]
[ext_resource type="PackedScene" uid="uid://5dsokgcjwj2d" path="res://weapons/emitters/projectile_emitter.tscn" id="3_ju68m"]

[node name="MissleLauncherController" type="Node3D"]
script = ExtResource("1_j4t82")
max_targets = 6
ammo_count = 100
lock_on_time = 1.0

[node name="AttackEmitter" parent="." instance=ExtResource("2_m6a2r")]

[node name="ProjectileEmitter" parent="AttackEmitter" instance=ExtResource("3_ju68m")]
projectile_type = 2

[node name="LockOnTimer" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = &"sfx"

[connection signal="timeout" from="LockOnTimer" to="." method="_on_lock_on_timer_timeout"]
